Bug 1252762 - Decode at most one audio/video sample before finishing seeking. r=cpearce.

The idea is to make NeedToDecode{Audio,Video} return false when mState is DECODER_STATE_SEEKING
so DispatchDecodeTasksIfNeeded() basically does nothing during seeking. And we call
Ensure{Audio,Video}DecodeTaskQueued instead during seeking to request audio/video samples
only when audio/video seeking is not completed.

MozReview-Commit-ID: 2n7ehVXAq4H